verifies if user exists on order creation